support to compressing logging